--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.2"
   }
 }
